Clipping fix

--- a/resources/css/avans.css
+++ b/resources/css/avans.css
@@ -195,7 +195,7 @@ body {
 
 @media only screen and (max-width: 1600px) {
   .avans-menu-user {
-    padding: 0 30px;
+    padding: 0 40px;
   }
 
   .avans-menu-logo-container {
